biocomplexity/templates/exceads-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exceads-dev-deployment
  namespace: biocomplexity
  labels:
    app: exceads-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exceads-dev
  template:
    metadata:
      labels:
        app: exceads-dev
    spec:
      volumes:
      # - name: exceads-nfs-volume
      #   persistentVolumeClaim:
      #     claimName: exceads-nfs-pvc
        - name: exceads-secrets
          secret:
            secretName: exceads-dev-secrets
        - name: exceads-db-secrets
          secret:
            secretName: exceads-dev-db-secrets
        
      imagePullSecrets:
        - name: exceads-dev-registry-secret
      containers:
      - name: exceads-frontend
        image: ghcr.io/nssac/exceads-dev:0.2.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-exceads
        resources:
          requests:
            memory: "2048Mi"
            cpu: "0.5"
          limits:
            memory: "4096Mi"
            cpu: "2"
        volumeMounts:
        - name: exceads-db-secrets
          readOnly: true
          mountPath: "/run/exceads-db-secrets"
        - name: exceads-secrets
          readOnly: true
          mountPath: "/run/exceads-secrets"
      - name: db
        image: mysql:8.0.20
        # ports:
        # - containerPort: 3306
        #   hostPort: 3306
        #   protocol: TCP
        # - containerPort: 33060
        #   hostPort: 33060
        #   protocol: TCP
        resources:
          requests:
            memory: "1024Mi"
            cpu: "0.2"
          limits:
            memory: "2048Mi"
            cpu: "1"
        volumeMounts:
        - name: exceads-db-secrets
          readOnly: true
          mountPath: "/run/exceads-db-secrets"

#
# Deployment file is the basic definition of the pod. It defines the container to run,
# the number of replicas, any ENV variables, VOLS to be mounted, SECRETS, etc.
#
