biocomplexity/templates/exceads-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exceads-dev-service
  namespace: biocomplexity
spec:
  selector:
    app: exceads-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-exceads
